This file lists all changes made to the game driver in all glory detail.
See the file HISTORY for a user-oriented summary of all the changes.

22-Dec-2009 (Gnomi)
  - When removing unnecessary F_SAVE_ARG_FRAMEs the compiler didn't
    adjust last_expression correctly in same cases leading to false
    program optimizations. (#683, #708, #709)
    (prolang.y)

10-Nov-2009 (Gnomi)
  - Check for references to destructed objects before entering them as
    keys into a mapping. (#689)
    (mapping.c)
  - Pass all unknown telnet options to the mudlib. (#670)
    (comm.c)
  - Let the player_for_flush list point to interactive_t* directly.
    This avoids inconsistencies between objects and their interactive
    structure caused when exec()ing. (Bug #683)
    (comm.c)

22-Oct-2009 (Zesstra)
  - sort_array(): sort in-place if array is given as reference. (#224)
    (array.c, func_spec)

21-Oct-2009 (Zesstra)
  - Applied a bunch of small fixes for manpages by Coogan. (#692)
  - Marked tail as deprecated, added sefun tail(), updated documentation
    of tail(). (#228)

18-Oct-2009 (Gnomi)
  - Free the xml buffer after xml reader and writer, because they might
    use it when cleaning up. (maybe #683)
    (pkg-xml2.c)
  - Don't call xmlCleanupParser, as it should be called when there's no more
    xml processing. Don't call xmlInitParser, as it is already done on startup.
    (pkg-xml2.c)

13-Oct-2009 (Gnomi)
  - Deactivate tls_trustdirectory per default as /etc/ssl/certs may contain
    a large number of certificates on usual installations (which are not
    related to client certificates) and GnuTLS clients have a problem with
    that (too large handshake data). Whoever wants to use client
    certificates shall set it up explicitely.
    (configure)
  - Updated Avalon settings file.
    (settings/avalon)

05-Oct-2009 (Zesstra)
  - prepend '/' in get_dir() in plain mode for entries in the root directory,