@@ -10,6 +10,8 @@ xx-xxx-200x (LDMud Team) -- 3.3.720
          order during initialization of libxml2 (#671) and could lead to
          memory corruption, because the memory used by libxml2 was subject to
          the garbage collector and would be free'd by it while still in use.
+       + get_type_info() lost refcounts to the function name of a closure,
+         causing it eventually being free'd prematurely (#712).
 
     - Changed Efuns:
        + get_dir(): prepend '/' in plain mode for entries in the root directory,
